...
                    },
                    placeholder = { Text("追加する持ち物") },
                    singleLine = true,
                    modifier = Modifier
                        .weight(1f)
                        .background(Color.White, shape = RoundedCornerShape(12.dp))
                        .semantics { contentDescription = "item_name_text_field" },
                    shape = RoundedCornerShape(12.dp)
                )

                SecondaryButton(
                    text = "＋ 追加",
                    onClick = {
                        focusManager.clearFocus()
                        registerItem()
                    },
                    modifier = Modifier
                        .height(56.dp)
                        .semantics { contentDescription = "register_item_button" },
                    enabled = state.form.canSubmit
                )
            }

            Spacer(Modifier.height(18.dp))

...
