...
                .fillMaxWidth()
                .padding(bottom = 40.dp)
                .padding(horizontal = 41.dp)
                .height(56.dp)
                .widthIn(max = 360.dp)
                .semantics {
                    contentDescription = "back_home_button"
                }
        )
    }
}

@Preview(showBackground = true)
...
