...
                },
                fab = {
                    FloatingActionButton(
                        modifier =
                        Modifier
                            .padding(end = 16.dp, bottom = 96.dp)
                            .semantics { contentDescription = "add_item_fab" },
                        containerColor = Primary500,
                        onClick = {
                            navigator.push(AppNavKey.Items)
                        }
                    ) {
                        Icon(
...
